datamodeling-service/datamodeling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-modeling-service
spec:
 ports:
  - targetPort: 5003
    port: 5003
    
 selector:
  app: data-modeling
